--- a/java/pom.xml
+++ b/java/pom.xml
@@ -23,7 +23,11 @@
             <version>3.18.1</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
